# florescence

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  v1.x_ideas.md
.planning/pr-descriptions/: stage-0-preflight.md  stage-1-plumbing.md  stage-2-saturation.md  stage-2-tilt-eq.md  stage-3-chorus-implementation.md  stage-3-chorus-scaffolding.md  stage-3-chorus-tests.md  stage-3-decisions.md  stage-3-filter.md  stage-4-conv-reverb.md  stage-4-decisions.md  stage-4-delay.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Chorus.cpp  Chorus.h  ChorusConfig.h  ConvReverb.cpp  ConvReverb.h  ConvReverbConfig.h  DSPConfig.h  Delay.cpp  Delay.h  DelayConfig.h  FXModule.h  Filter.cpp  Filter.h  FilterConfig.h  JilesAtherton.cpp  JilesAtherton.h  Saturation.cpp  Saturation.h  SaturationConfig.h  ThrowawayOnePoleLowPass.cpp  ThrowawayOnePoleLowPass.h  TiltEQ.cpp  TiltEQ.h
Tests/: CMakeLists.txt  test_chorus.cpp  test_convreverb.cpp  test_delay.cpp  test_filter.cpp  test_jiles_atherton.cpp  test_saturation.cpp  test_throwaway_one_pole.cpp  test_tilteq.cpp  test_vst3_smoke.cpp
docs/: ARCHITECTURE.md  CONTEXT.md  customers.template.md  decisions.md  non-code-todos.md  open_questions.md  roadmap.md
docs/aesthetic/: reference-tracks.md
docs/presets/: drums.md  synths.md  vocals.md
docs/research/: chorus.md  conv-reverb.md  delay.md  filter.md  ir-sourcing.md  saturation.md  tape-saturation.md
notebooks/: chorus_visualization.ipynb  conv_reverb_wet_path.ipynb  delay_timing.ipynb  filter_response.ipynb  stage2_saturation_analysis.ipynb
